@@ -298,7 +298,9 @@ public class Leader {
                 while (!stop) {
                     try{
                         Socket s = ss.accept();
-                        s.setSoTimeout(self.tickTime * self.syncLimit);
+                        // start with the initLimit, once the ack is processed
+                        // in LearnerHandler switch to the syncLimit
+                        s.setSoTimeout(self.tickTime * self.initLimit);
                         s.setTcpNoDelay(nodelay);
                         LearnerHandler fh = new LearnerHandler(s, Leader.this);
                         fh.start();
